# task_tracker

./: .gitignore  CMakeLists.txt  LICENSE  README.md
build-debug/: task-cli
data/: config.json
include/: cli.h  json.h  task.h
src/: .json.cpp.swm  .json.cpp.swn  .json.cpp.swo  cli.cpp  json  json.cpp  main.cpp
